--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pug": "^2.0.0-beta11",
     "pug-loader": "^2.3.0",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.3.0"
+    "webpack-dev-server": "^2.3.0",
+    "webpack-merge": "^2.6.1"
   }
 }
