--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pug-loader": "^2.3.0",
     "sass-loader": "^5.0.1",
     "style-loader": "^0.13.1",
+    "stylelint-webpack-plugin": "^0.5.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0",
     "webpack-merge": "^2.6.1"
