--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "^3.15.0",
     "eslint-loader": "^1.6.1",
     "extract-text-webpack-plugin": "^2.0.0-beta",
+    "favicons-webpack-plugin": "^0.0.7",
     "file-loader": "^0.10.0",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.0",
