--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Dmitri Sivachenko",
   "license": "ISC",
   "devDependencies": {
+    "clean-webpack-plugin": "^0.1.15",
     "css-loader": "^0.26.1",
     "eslint": "^3.15.0",
     "eslint-loader": "^1.6.1",
