--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "author": "Dmitri Sivachenko",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
     "clean-webpack-plugin": "^0.1.15",
     "css-loader": "^0.26.1",
     "eslint": "^3.15.0",
     "eslint-loader": "^1.6.1",
+    "external-svg-sprite-loader": "^2.0.0",
     "extract-text-webpack-plugin": "^2.0.0-beta",
     "favicons-webpack-plugin": "^0.0.7",
     "file-loader": "^0.10.0",
