--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "stylelint-webpack-plugin": "^0.5.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0",
-    "webpack-merge": "^2.6.1"
+    "webpack-merge": "^2.6.1",
+    "webpack-spritesmith": "^0.3.1"
   },
   "dependencies": {
     "jquery": "^3.1.1",
