--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "webpack-spritesmith": "^0.3.1"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
     "normalize.css": "^5.0.0"
   }
