--- a/package.json
+++ b/package.json
@@ -41,9 +41,6 @@
   "dependencies": {
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
-    "normalize.css": "^5.0.0"
-  },
-  "browserslist": [
-    "last 2 versions"
-  ]
+    "reset-css": "^2.2.0"
+  }
 }
