--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
+    "browser-sync": "^2.18.8",
+    "browser-sync-webpack-plugin": "^1.1.4",
     "clean-webpack-plugin": "^0.1.15",
     "css-loader": "^0.26.1",
     "eslint": "^3.15.0",
