--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0",
     "webpack-merge": "^2.6.1",
+    "webpack-modernizr-loader": "^3.0.0",
     "webpack-spritesmith": "^0.3.1"
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
+    "modernizr": "^3.3.1",
     "reset-css": "^2.2.0"
   }
 }
