--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
+    "lodash": "^4.17.4",
     "modernizr": "^3.3.1",
     "reset-css": "^2.2.0"
   }
